19-03-2025 new calculators added 15

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -760,6 +760,7 @@
             <a href="airflowrate.html" class="calculator-btn">Air Flow Rate (Mass Flow) Calculator</a>
             <a href="airflowratetimebasedcal.html" class="calculator-btn">Air Flow Rate (Time-Based) Calculator</a>
             <a href="actualvalueofsuperheated.html" class="calculator-btn">Actual  value of Super-Heated Steam Flow Calculator</a>
+<a href="airpollution.html" class="calculator-btn">Air Pollutant Concentration Calculator</a>
             <a href="todetermineblowdownrateofboiler.html" class="calculator-btn">Boiler Blowdown Rate Calculator</a>
             <a href="calculatingboilerefficiency.html" class="calculator-btn">Boiler Efficiency Calculator</a>
             <a href="bernoullisequationwithconstantpotentialenerguterms.html" class="calculator-btn">Bernoulli's Equation With Constant Potential Energy Terms Calculator</a>
@@ -798,6 +799,8 @@
 
              <a href="reynoldnumber.html" class="calculator-btn">Friction Factor Calculator (Reynolds-Number)</a>
              <a href="fractureconductivity.html" class="calculator-btn">Fracture Conductivity Calculator</a>
+             <a href="atmosphericdispersionmodeling.html" class="calculator-btn">Gaussian Air Pollutant Dispersion Calculator</a>
+
 
             <a href="heattransferthermoflow.html" class="calculator-btn">Heat Transfer Thermo Flow Calculator</a>
             <a href="heattransfersteam.html" class="calculator-btn">Heat Transfer Rate Calculator (Condensing Steam)</a>
@@ -818,6 +821,9 @@
             <a href="maximumallowconcentration.html" class="calculator-btn">Maximum Allowable Concentration (MAC) Calculator</a>
             <a href="todeterminemassflowratefromvolumetricflowrate.html" class="calculator-btn">Mass Flow Rate from volumetric flowrate Calculator</a>
             <a href="metalloss.html" class="calculator-btn">Metal Loss Calculator</a>
+            <a href="waterquantityestimatorcal.html" class="calculator-btn">Municipal Water Quantity Estimator Calculator</a>
+
+
 
             <a href="pressuredropacrossavalveinaliquidsteam.html" class="calculator-btn">Pressure Drop Across a Valve In A Liquid Calculator</a>
 
@@ -876,6 +882,8 @@
 
 
 <a href="convertingwatermassflowtovolumetricflow.html" class="calculator-btn">Water Mass to Volumetric Flowrate Converter Calculator</a>
+<a href="fluctuationsinrateofdemandcalculator.html" class="calculator-btn">Water Demand Fluctuation Calculator</a>
+
 
 
 
