--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -906,6 +906,8 @@
 
 
             <a href="nema&ipratecal.html" class="calculator-btn">NEMA and IP Ratings Calculator</a>
+            <a href="nooverpressureventarea.html" class="calculator-btn">No-Overpressure Vent Area Calculator</a>
+          
             <a href="trir.html" class="calculator-btn">OSHA Total Recordable Incident Rate (TRIR) Calculator</a>
             <a href="dartcal.html" class="calculator-btn">OSHA DART Rate Calculator</a>
             <a href="ohmslaw.html" class="calculator-btn">Ohm's Law Calculator</a>
@@ -940,6 +942,8 @@
 
 <a href="remainingcorrosionallowance.html" class="calculator-btn">Remaining Corrosion Allowance Calculator</a>
 
+<a href="reliefventrateallvaporallliquid.html" class="calculator-btn">Relief Vent Rate  (All-Vapor and All-Liquid Venting) Calculator</a>
+
 
 
 
@@ -968,6 +972,8 @@
 
 <a href="steampipelinepressuredrop.html" class="calculator-btn">Steam Pipeline Pressure Drop Calculator</a>
 <a href="thestallloadforaconstantflow.html" class="calculator-btn">Stall Load For A Constant Flow Secondary Calculator</a>
+<a href="SphericalPortionCalculation.html" class="calculator-btn">Spherical Portion Calculator</a>
+
 
 
             <a href="traininghourcal.html" class="calculator-btn">Training Hour Calculation</a>
@@ -986,6 +992,8 @@
             <a href="thermalpentrationtimeforconduvtiveheattransfor.html" class="calculator-btn">Thermal Penetration Time for Conductive Heat Transfer</a>
 
             <a href="thermalexpansionofpipe.html" class="calculator-btn">Thermal Expansion Of Pipe Calculator</a>
+            <a href="sphericalradiuscalculationfortorisphericalheads.html" class="calculator-btn">Tori-Spherical Head Radius Calculator</a>
+
 
 
 
@@ -1002,6 +1010,9 @@
 
             <a href="wireropecal.html" class="calculator-btn">Wire Rope Grips Calculator</a>
             <a href="wellcontrolkillmudwidget.html" class="calculator-btn">Well Control (Kill Mud Weight) Calculator </a>
+
+
+            <a href="sphericalradiuscalculationforellipsoidal.htmlheads.html" class="calculator-btn">2:1 Ellipsoidal Head Radius Calculator</a>
             
 
 
