--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -768,6 +768,9 @@
 
             <a href="bmicalculator.html" class="calculator-btn">BMI Calculator</a>
             <a href="bmrcalculator.html" class="calculator-btn">Basal Metabolic Rate (BMR) Calculator</a>
+            <a href="bricalcualtor.html" class="calculator-btn">Body Roundness Index (BRI) Calculator</a>
+
+
             <a href="bodyfatcalcualtor.html" class="calculator-btn">Body Fat Calculator (U.S. Navy Method)</a>
             <a href="baicalculator.html" class="calculator-btn">Body Adiposity Index (BAI) Calculator</a>
             <a href="bodyframesizecalcualtor.html" class="calculator-btn">Body Frame Size Calculator</a>
@@ -779,6 +782,8 @@
             <a href="drinkcal.html" class="calculator-btn">Daily Drinking Water Intake Calculator</a>
             <a href="dietaryreferenceintakes.html" class="calculator-btn">Dietary Reference Intake (DRI) Calculator</a>
             <a href="fatfreemassindex.html" class="calculator-btn">Fat-Free Mass Index (FFMI) Calculator</a>
+            <a href="fiberintakecalculator.html" class="calculator-btn">Fiber Intake Calculator</a>
+
 
 
 
