20-03-2025 new 15 calcualtors added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -773,6 +773,9 @@
 
 
 <a href="corrosionrate.html" class="calculator-btn">Corrosion Rate Calculator</a>
+<a href="cyclonecollectionefficiency.html" class="calculator-btn">Cyclone Collection Particle Removal Efficiency Calculator</a>
+<a href="cyclonecollectionforparticlediameter.html" class="calculator-btn">Cyclone 50% Collection Efficiency for Particle Diameter Calculator</a>
+<a href="cycloneeffectivenumber.html" class="calculator-btn">Cyclone Effective Number of Turns Approximation Calculator</a>
 
 
 
@@ -789,6 +792,8 @@
             <a href="flowcoefficientlift.html" class="calculator-btn">Equal Percentage Valve Lift Calculator Based on Relative K<sub>v</sub></a>
             <a href="environmentaldamagefrequency.html" class="calculator-btn">Environmental Damage Frequency (ENDF) Calculator</a>
             <a href="environmentalincidentrate.html" class="calculator-btn">Environmental Incident Rate (EIR) Calculator</a>
+            <a href="electrostaticprecepator.html" class="calculator-btn">Electrostatic Precipitator Efficiency Calculator</a>
+
 
 
             <a href="flashsteamcalculator.html" class="calculator-btn">Flash Steam Calculator</a>
@@ -822,6 +827,8 @@
             <a href="todeterminemassflowratefromvolumetricflowrate.html" class="calculator-btn">Mass Flow Rate from volumetric flowrate Calculator</a>
             <a href="metalloss.html" class="calculator-btn">Metal Loss Calculator</a>
             <a href="waterquantityestimatorcal.html" class="calculator-btn">Municipal Water Quantity Estimator Calculator</a>
+            <a href="maximum concentration, effective stack height, and stability class.html" class="calculator-btn">Maximum Pollutant Concentration Calculator</a>
+
 
 
 
@@ -883,6 +890,13 @@
 
 <a href="convertingwatermassflowtovolumetricflow.html" class="calculator-btn">Water Mass to Volumetric Flowrate Converter Calculator</a>
 <a href="fluctuationsinrateofdemandcalculator.html" class="calculator-btn">Water Demand Fluctuation Calculator</a>
+
+
+
+
+
+
+
 
 
 
