--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -768,6 +768,8 @@
             <a href="customersatisfaction.html" class="calculator-btn">Customer Satisfaction (CSAT) Calculator</a>
             <a href="costperminute.html" class="calculator-btn">Cost Per Minute (CPM) Calculator </a>
             <a href="costofmaking.html" class="calculator-btn">Cost of Making (CM) Calculator </a>
+            <a href="correctiveactioneffectivenesscal.html" class="calculator-btn">Corrective Action Effectiveness (CAE) Calculator</a>
+
 
 
 
@@ -795,6 +797,9 @@
             <a href="thepressuredropforaliquidequalsthefrictionloss.html" class="calculator-btn">Pressure Drop & Friction Loss Calculator</a>
             <a href="processcapabilitycpcpk.html" class="calculator-btn"> Process Capability (Cp, Cpk) Calculator</a>
             <a href="efficiency.html" class="calculator-btn">Production Efficiency Calculator</a>
+            <a href="qualitylossfunctioncal.html" class="calculator-btn">Quality Loss Function Calculator (Taguchi Method)</a>
+
+
 
 
 
