21-03-2025 new 15 calcualtors added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -776,6 +776,8 @@
 <a href="cyclonecollectionefficiency.html" class="calculator-btn">Cyclone Collection Particle Removal Efficiency Calculator</a>
 <a href="cyclonecollectionforparticlediameter.html" class="calculator-btn">Cyclone 50% Collection Efficiency for Particle Diameter Calculator</a>
 <a href="cycloneeffectivenumber.html" class="calculator-btn">Cyclone Effective Number of Turns Approximation Calculator</a>
+<a href="continuityequation.html" class="calculator-btn">Continuity Equation Calculator</a>
+
 
 
 
@@ -812,9 +814,13 @@
             <a href="heattransferthermoresistance.html" class="calculator-btn">Heat Transfer Thermo Resistance Calculator</a>
             <a href="condensingsteam.html" class="calculator-btn">Heat Transferred By Condensing Steam Calculator</a>
             <a href="heatexchangertemperaturedesignconstant.html" class="calculator-btn">Heat Exchanger Temperature Design Constant Calculator</a>
+            <a href="incineration.html" class="calculator-btn">Incineration DRE Calculator</a>
+
 
 
             <a href="todeterminekinematicviscocityoffluid.html" class="calculator-btn">Kinematic Viscosity Calculator</a>
+            <a href="kilin.html" class="calculator-btn">Kiln Residence Time Calculator</a>
+
             <a href="logmeantemperaturedifference.html" class="calculator-btn">Log Mean Temperature Difference (LMTD) Calculator</a>
             <a href="flowratevspressureloss.html" class="calculator-btn">Liquid Flow Rate vs. Pressure Drop Calculator</a>
 
@@ -899,7 +905,7 @@
 
 
 
-
+<a href="Mass Loading Calculator for Water Treatment.html" class="calculator-btn">Water Pollutant Load Calculator</a>
 
 
          
