--- a/firesubcalculators.html
+++ b/firesubcalculators.html
@@ -761,6 +761,7 @@
             <a href="basedesignquantityforco₂calculator.html" class="calculator-btn">Base Design Quantity For CO₂ Calculator</a>
             <a href="bernoullisequationforaliquid.html" class="calculator-btn">Bernoulli's Equation For A Liquid Calculator</a>
             <a href="bernoullisequationwithfrictionloss.html" class="calculator-btn">Bernoulli's Equation With Constant Potential Energy Terms And Frictional Losses Calculator</a> 
+            <a href="combustionefficiency.html" class="calculator-btn">Combustion Efficiency (CE) Calculator</a>
             
             <a href="dischargeratecalculation.html" class="calculator-btn">Discharge Rate Calculator For CO₂</a>
             <a href="designquantityofco₂calculatorforlocal.html" class="calculator-btn">Design Quantity Of CO₂ Calculator For Local Application</a>
@@ -806,6 +807,7 @@
 
             <a href="modifiedquantitycalculator.html" class="calculator-btn">Modified CO₂ Quantity Calculator</a>
             <a href="nitrogenequivalency.html" class="calculator-btn">Nitrogen Equivalency (Kik) Calculator</a>
+            <a href="normalizedmassfluxhighqualityregion.html" class="calculator-btn">Normalized Mass Flux Formula (High-Quality Region) Calculator</a>
             <a href="pressurefactor.html" class="calculator-btn">Pressure Factor Calculator</a>
 
             
