--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -757,6 +757,8 @@
         </div>
         <div class="button-container" id="calculatorList">
             <a href="actualevaporationrateofaboilerfromitskWrating.html" class="calculator-btn">Actual Evaporation Rate Of A Boiler From Its kW Rating And The Energy Required To Make Steam Calculator</a>
+            <a href="attendeetrainingtimecal.html" class="calculator-btn">Attendee Training Time Calculator</a>
+
 
             <a href="boilerhorsepowerfromheattransfersrea.html" class="calculator-btn">Boiler Horse Power From Heat Transfer Area Calculator</a>
             <a href="binomialdistributioncal.html" class="calculator-btn">Binomial Distribution Calculator</a>
@@ -816,9 +818,13 @@
             <a href="statisticalprocesscontrolchat.html" class="calculator-btn">Statistical Process Control (SPC) Chart Calculator</a>
             <a href="secondaryfluidoutlettemperatureatanyload.html" class="calculator-btn">Secondary Fluid Outlet Temperature At Any Load Calculator</a>
             <a href="standardminutevalvesmv.html" class="calculator-btn">Standard Minute Value (SMV) Calculator</a>
+            <a href="samplesizecalculator.html" class="calculator-btn">Sample Size Calculator</a>
+
 
 
             <a href="turndownratioofasteamflowmeter.html" class="calculator-btn">Turndown Ratio Of A Steam Flowmeter Calculator</a>
+            <a href="trainingeffiencycalculator.html" class="calculator-btn">Training Efficiency Calculator</a>
+
             <a href="vortexsheddingfrequency.html" class="calculator-btn">Vortex Shedding Frequency Calculator</a>
             
          
