22-03-2025 new 15 calculators added and header foter removed from environmnt calculators

--- a/header.html
+++ b/header.html
@@ -307,6 +307,9 @@
             font-size: 24px;
             /* Adjust font size as needed */
         }
+        .note-container li{
+text-align: justify;    
+}
     </style>
 </head>
 
