--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -781,6 +781,8 @@
             
             <a href="drinkcal.html" class="calculator-btn">Daily Drinking Water Intake Calculator</a>
             <a href="dietaryreferenceintakes.html" class="calculator-btn">Dietary Reference Intake (DRI) Calculator</a>
+            <a href="epworthsleepinessscale.html" class="calculator-btn">Epworth Sleepiness Scale (ESS) Calculator</a>
+
             <a href="fatfreemassindex.html" class="calculator-btn">Fat-Free Mass Index (FFMI) Calculator</a>
             <a href="fiberintakecalculator.html" class="calculator-btn">Fiber Intake Calculator</a>
 
@@ -820,6 +822,10 @@
             <a href="workplaceexposurelimit.html" class="calculator-btn">Workplace Exposure Limit (WEL) Calculator</a>
             <a href="weightlosscalcualtor.html" class="calculator-btn">Weight Loss Calculator</a>
             <a href="weightgaincalculator.html" class="calculator-btn">Weight Gain Calculator</a>
+            <a href="waisttohipcalculator.html" class="calculator-btn">Waist-to-Hip Ratio Calculator</a>
+            <a href="waisttohipcalculator.html" class="calculator-btn">Waist-to-Height Ratio Calculator</a>
+
+
 
 
             
