--- a/reynoldnumber.html
+++ b/reynoldnumber.html
@@ -225,23 +225,23 @@ select {
     <h2>Friction Factor Calculator(Reynolds-Number)</h2>
    <div class="input-row">
     <div class="form-group">
-        <label for="density">Density (ρ) [kg/m³]:</label>
+        <label for="density"><strong>Density (ρ) [kg/m³]:</strong></label>
         <input type="number" id="density" placeholder="Enter fluid density" min="0.001" step="any">
     </div>
 
     <div class="form-group">
-        <label for="velocity">Velocity (u) [m/s]:</label>
+        <label for="velocity"><strong>Velocity (u) [m/s]:</strong></label>
         <input type="number" id="velocity" placeholder="Enter fluid velocity" min="0.001" step="any">
     </div>
 </div>
 <div class="input-row">
     <div class="form-group">
-        <label for="diameter">Pipe Diameter (D) [m]:</label>
+        <label for="diameter"><strong>Pipe Diameter (D) [m]:</strong></label>
         <input type="number" id="diameter" placeholder="Enter pipe diameter" min="0.001" step="any">
     </div>
 
     <div class="form-group">
-        <label for="viscosity">Dynamic Viscosity (μ) [kg/m·s]:</label>
+        <label for="viscosity"><strong>Dynamic Viscosity (μ) [kg/m·s]:</strong></label>
         <input type="number" id="viscosity" placeholder="Enter viscosity" min="0.000001" step="any">
     </div>
 </div>
