25-3-2025 new 15 calculators added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -786,6 +786,10 @@
 
             <a href="todeterminetheabsoulteordynamicofafluid.html" class="calculator-btn">Dynamic Viscosity Calculator</a>
             <a href="streeterphelps.html" class="calculator-btn">Dissolved Oxygen (DO) Deficit (Streeter-Phelps Model) Calculator</a>
+            <a href="decreasingrateofincreasinggrowth.html" class="calculator-btn">Decreasing-Rate-of-Increase Growth Calculator</a>
+            <a href="daughterproductactivity.html" class="calculator-btn">Daughter Product Activity Calculator</a>
+
+
 
             
             <a href="envcarbonfootprintcal.html" class="calculator-btn">Environmental Impact Carbon Footprint Calculator</a>
@@ -801,6 +805,8 @@
             <a href="environmentalincidentrate.html" class="calculator-btn">Environmental Incident Rate (EIR) Calculator</a>
             <a href="electrostaticprecepator.html" class="calculator-btn">Electrostatic Precipitator Efficiency Calculator</a>
             <a href="exponentialpopulationgrowthprojection.html" class="calculator-btn">Exponential Population Growth Calculator</a>
+            <a href="effectivehalflife.html" class="calculator-btn">Effective Half-Life Calculator</a>
+
 
 
 
@@ -823,6 +829,8 @@
             <a href="heattransferthermoresistance.html" class="calculator-btn">Heat Transfer Thermo Resistance Calculator</a>
             <a href="condensingsteam.html" class="calculator-btn">Heat Transferred By Condensing Steam Calculator</a>
             <a href="heatexchangertemperaturedesignconstant.html" class="calculator-btn">Heat Exchanger Temperature Design Constant Calculator</a>
+            <a href="halflife.html" class="calculator-btn">Half-Life Decay Calculator</a>
+
             <a href="incineration.html" class="calculator-btn">Incineration DRE Calculator</a>
 
 
@@ -862,6 +870,8 @@
             <a href="recyclingimpactcal.html" class="calculator-btn">Recycling Impact Calculator</a>
             <a href="rankineefficiencycalculator.html" class="calculator-btn">Rankine Efficiency Calculator</a>
             <a href="releativepiperoughness.html" class="calculator-btn">Relative Pipe Roughness Calculator</a>
+            <a href="ratioandcorrelationgrowth.html" class="calculator-btn">Ratio and Correlation Growth Calculator</a>
+
             <a href="steamflowrateforasteaminjection.html" class="calculator-btn">Steam Flow Rate For A Steam Injection Process Calculator</a>
 
             <a href="specificvolumeofwetsteam.html" class="calculator-btn">Specific Volume Of Wet Steam Calculator</a>
@@ -919,6 +929,9 @@
 
 
          
+
+
+
 
 
 
