--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -765,6 +765,8 @@
 
 
             <a href="absicalcualtor.html" class="calculator-btn">A Body Shape Index (ABSI) Calculator</a>
+            <a href="a1c-calculator.html" class="calculator-btn">A1c Calculator – Hemoglobin A1c to Average Blood Sugar</a>
+
 
             <a href="bmicalculator.html" class="calculator-btn">BMI Calculator</a>
             <a href="bmrcalculator.html" class="calculator-btn">Basal Metabolic Rate (BMR) Calculator</a>
@@ -774,6 +776,10 @@
             <a href="bodyfatcalcualtor.html" class="calculator-btn">Body Fat Calculator (U.S. Navy Method)</a>
             <a href="baicalculator.html" class="calculator-btn">Body Adiposity Index (BAI) Calculator</a>
             <a href="bodyframesizecalcualtor.html" class="calculator-btn">Body Frame Size Calculator</a>
+            <a href="bloodsugarconverter.html" class="calculator-btn">Blood Sugar Converter</a>
+            <a href="cardiacindexcalculator.html" class="calculator-btn">Cardiac Index Calculator</a>
+
+
 
 
 
@@ -781,6 +787,9 @@
             
             <a href="drinkcal.html" class="calculator-btn">Daily Drinking Water Intake Calculator</a>
             <a href="dietaryreferenceintakes.html" class="calculator-btn">Dietary Reference Intake (DRI) Calculator</a>
+            <a href="diabetesriskcalculator.html" class="calculator-btn">Diabetes Risk Calculator – Estimate Your 7.5-Year Risk</a>
+
+
             <a href="epworthsleepinessscale.html" class="calculator-btn">Epworth Sleepiness Scale (ESS) Calculator</a>
 
             <a href="fatfreemassindex.html" class="calculator-btn">Fat-Free Mass Index (FFMI) Calculator</a>
