--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -786,6 +786,7 @@
         
             <a href="firstpassyieldcal.html" class="calculator-btn">First Pass Yield (FPY) Calculator</a>
             <a href="foldofincrease.html" class="calculator-btn">Fold of Increase Calculator</a>
+            <a href="facadeelementweight.html" class="calculator-btn">Facade Element Weight Calculator </a>
 
             <a href="heatexchangerheatingarea.html" class="calculator-btn">Heat Exchanger Heating Area Calculator</a>
             <a href="largestparticlesizethroughastrainerscreen.html" class="calculator-btn">Largest Particle Size Through a Strainer Screen Calculator</a>
